# infinite-questions

./: .gitignore  README.md  package-lock.json  package.json  run.sh  vercel.json
backend/: app.py  requirements.txt  trivia_ai.py  vercel.json  wikipedia_api.py
backend/infinite-questions/: pyproject.toml
backend/infinite-questions/infinite_questions/: app.py  config.py  trivia_ai.py  wikipedia_api.py
backend/infinite_questions/: app.py  config.py  wikipedia_api.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: AnswerPopup.js  App.css  App.js  FinalScreen.css  FinalScreen.js  QuestionAnswer.js  setupProxy.js
vercel/: vercel.json
