[tool.poetry]
name = "infinite-questions"
version = "0.1.0"
description = ""
authors = ["rose.shahar <rose.shahar@gmail.com>"]
readme = "README.md"
packages = [{include = "infinite_questions"}]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia-api = "^0.6.0"
flask = {extras = ["async"], version = "^3.0.1"}
aiohttp = "^3.9.1"
openai = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "infinite_questions.app:main"
