[tool.poetry]
name = "infinite-questions"
version = "0.1.0"
description = ""
authors = ["rose.shahar <rose.shahar@gmail.com>"]
readme = "README.md"
packages = [{include = "infinite_questions"}]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia-api = "^0.6.0"
aiohttp = "^3.9.1"
openai = "^1.8.0"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "infinite_questions.app:main"
